# attractor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  attractor.sh  go.mod  go.sum  pyproject.toml
attractor/: __init__.py  cli.py  exceptions.py
attractor/agent/: __init__.py  environment.py  events.py  history.py  loop.py  loop_detector.py  provider_profile.py  session.py  skill.py  steering.py
attractor/llm/: __init__.py  adapter.py  catalog.py  client.py  models.py  streaming.py
attractor/pipeline/: __init__.py  checkpoint.py  conditions.py  context.py  edge_selector.py  goal_gate.py  graph.py  interviewer.py  parser.py  progress.py  retry.py  runner.py  status.py  stylesheet.py  validation.py
attractor/web/: __init__.py  events.py  routes.py  runner_bridge.py  server.py
cmd/attractor/: main.go
examples/: cli.dot  hello.dot  rivroamer.dot
internal/aerr/: errors.go
internal/agent/: events.go  history.go  history_test.go  loop.go  loop_detector.go  provider_profile.go  provider_profile_test.go  session.go  skill.go  steering.go
internal/llm/: adapter.go  catalog.go  client.go  middleware.go  models.go  streaming.go
internal/pipeline/: attr.go  checkpoint.go  conditions.go  context.go  edgeselector.go  fixes_test.go  goalgate.go  graph.go  handler.go  handler_codergen.go  handler_parallel.go  handler_tool.go  handlers_simple.go  interviewer.go  parser.go  parser_test.go  pipeline_test.go  retry.go  runner.go  status.go  stylesheet.go  validation.go
scripts/: attractor-run.sh
skills/: pipeline-author.yaml
tests/: conftest.py
(+65 files in other folders)
